[package]
name = "tokio-minihttp"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
bytes = { git = "https://github.com/carllerche/bytes" }
env_logger = "0.3.4"
futures = "0.1.1"
httparse = "1.1.2"
log = "0.3.6"
time = "0.1"
tokio-core = "0.1.0"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
