[package]
name = "tokio-minihttp"
version = "0.1.1"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.4.5"
futures = "0.1.14"
httparse = "1.2.3"
log = "0.3.6"
net2 = "0.2.31"
time = "0.1.38"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-proto = "0.1.1"
tokio-service = "0.1"

[dev-dependencies]
rustc-serialize = "0.3"
num_cpus = "1.6.2"
env_logger = { version = "0.3.4", default-features = false }
serde_json = "1.0.2"
